Added GoogleMaps API style

--- a/StarterStyle.css
+++ b/StarterStyle.css
@@ -58,4 +58,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+} #map {
+  height: 400px;
+  width: 400px;
 }
