--- a/FinalProject.css
+++ b/FinalProject.css
@@ -17,7 +17,7 @@ body {
 /* Menu Buttons Styles */
 
 .button {
-  margin: 10px;
+/*   margin: 10px; */
   border-radius: 10px;
   height: 30px;
   width: 100px;
