--- a/FinalProject.css
+++ b/FinalProject.css
@@ -2,14 +2,48 @@
 
 /* General Styles */
 
+#image {
+  position:absolute;
+  z-index:999;
+  top:0;
+  left:0;
+  height:50px;
+  width:50px;
+  opacity:0.8;
+  font:10px/10px monospace;
+  overflow:hidden;
+  pointer-events:none;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #1d5374;
+  color: white;
+  font-family: Arial;
+  font-size: 18px;
+  text-align: center;
+}
+
 body {
-  background-color: #aadbff;
-  /* background-image: url("sky.jpg"); */
+  background-color: #1d5374;
+  background-image: url("ross-parmly-25230-unsplash.jpg");
+  background-size:cover;
+  background-repeat:no-repeat;
+  margin: 0;
 }
 
 #pageTitle, h1 {
   font-family: Arial, bold;
   font-size: 48px;
+  text-align: center;
+  color: white;
+}
+
+h2 {
+  font-family: Arial, bold;
   text-align: center;
   color: #1d5374;
 }
@@ -17,7 +51,6 @@ body {
 /* Menu Buttons Styles */
 
 .button {
-/*   margin: 10px; */
   border-radius: 10px;
   height: 30px;
   width: 100px;
@@ -32,7 +65,7 @@ div#buttons-container {
   text-align: center;
 }
 
-.button:hover {
+.button:hover, #submitNewReview:hover {
   background-color: #1d5374;
   color: white;
 }
@@ -60,7 +93,7 @@ div#buttons-container {
   background-color: red;
 }
 
-.overlay-container {
+/* .overlay-container {
   position: relative;
   text-align: center;
   display: inline-block;
@@ -83,7 +116,7 @@ div#buttons-container {
 .overlay-container:hover .overlay {
   opacity: 0;
   display: none;
-}
+} */
 
 .text {
   color: white;
@@ -101,18 +134,6 @@ div#buttons-container {
 
 .menuDiv {
   text-align: center;
-}
-
-.newDiv {
-  text-align: center;
-  width: 50%;
-  float: left;
-}
-
-.revDiv {
-  text-align: center;
-  width: 50%;
-  float: right;
 }
 
 .homeBtn {
@@ -139,6 +160,119 @@ div#buttons-container {
   text-align: center;
 }
 
+/* Review Styles */
+
+.revDiv {
+  height: 350px;
+}
+
+#submitNewReview {
+  border-radius: 10px;
+  height: 30px;
+  width: 150px;
+  flex: 1 0 25%;
+  text-align: center;
+  font-size: 15px;
+  font-family: Arial;
+  margin: auto;
+}
+
+#review-form {
+  text-align: center;
+  width: 40%;
+  float: left;
+}
+
+div#visible-reviews {
+  overflow: scroll;
+  height: 280px;
+  width: 500px;
+  font-size: 15px;
+  font-family: Arial;
+  color: #1d5374;
+  display: inline-block;
+}
+
+#visible-reviews {
+  background: white;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 50%;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #1d5374;
+}
+
+.visRevDiv {
+  float: right;
+  width: 50%;
+  text-align: center;
+}
+
+#specificReviewTitle {
+  font-family: Arial;
+  color: #1d5374;
+}
+
+#review-name {
+  border-radius: 5px;
+  width: 200px;
+  height: 20px;
+  font-size: 15px;
+}
+
+#newReview {
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #1d5374;
+  font-size: 15px;
+  background: #EBF2F5;
+}
+
+/* Video Styles */
+
+.videoDiv {
+  text-align: center;
+  display: block;
+  width: 50%;
+  float: right;
+}
+
+/* Destination Styles */
+
+.aiportMapContainer {
+  display: inline-block;
+}
+
+#map {
+  display: inline-block;
+  height: 300px;
+  width: 500px;
+}
+
+.map {
+  height: 300px;
+  width: 50%;
+  float: left;
+}
+
+.destContainer {
+  text-align: center;
+  /* width: 50%; */
+  /* float: left; */
+  height: 350px
+}
+
+/* Dropdown Styles */
+
+#dropDown, #airportDropDown {
+  height: 50px;
+  font-size: 25px;
+}
+
 /* Image Styles */
 
 #Boeing737 {
@@ -159,9 +293,4 @@ div#buttons-container {
 #Boeing747 {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lufthansa_Boeing_747-8_%2816093562187%29.jpg/1200px-Lufthansa_Boeing_747-8_%2816093562187%29.jpg");
   background-size: cover;
-}
-
-#map {
-    height: 300px;
-    width: 300px;
 }
