--- a/FinalProject.css
+++ b/FinalProject.css
@@ -241,6 +241,9 @@ div#visible-reviews {
 }
 
 #airportVid {
+  text-align: center;
+  margin: 0 50px;
+  display: inline-block;
   width: 50%;
 /*   float: right; */
 }
@@ -255,6 +258,7 @@ div#visible-reviews {
   display: inline-block;
   height: 300px;
   width: 500px;
+  margin: 0 50px;
 }
 
 .map {
